# pydoppler3d

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  sample_script.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
pydoppler3d/: __init__.py  cli.py  components.py  convolution.py  data.py  defaults.py  geometry.py  project.py  pydoppler_compat.py  reconstruct.py  sample_data.py  visualize.py
pydoppler3d/test_data/v834cen/: README.md  binarymodel.in  doptomog.in  specextract.in  specprepare.in
pydoppler3d/test_data/v834cen/spectra/: mcv  mcv001.txt  mcv002.txt  mcv003.txt  mcv004.txt  mcv005.txt  mcv006.txt  mcv007.txt  mcv008.txt  mcv009.txt  mcv010.txt  mcv011.txt  mcv012.txt  mcv013.txt  mcv014.txt  mcv015.txt  mcv016.txt  mcv017.txt  mcv018.txt  mcv019.txt  mcv020.txt  mcv021.txt  mcv022.txt  mcv023.txt  mcv024.txt  mcv025.txt  mcv026.txt  mcv027.txt  mcv028.txt  mcv029.txt  mcv030.txt  mcv031.txt  mcv032.txt  mcv033.txt  mcv034.txt  mcv035.txt  mcv036.txt  mcv037.txt  mcv038.txt  mcv039.txt  (+20 more)
tests/: test_cli.py  test_components.py  test_data.py  test_defaults.py  test_geometry.py  test_project.py  test_pydoppler_compat.py  test_reconstruct.py
