[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydoppler3d"
version = "0.1.0"
description = "Prototype 3D Doppler tomography tools for phase-resolved line profiles"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Francesco Coti Zelati"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["doppler", "tomography", "astronomy", "spectroscopy", "3d"]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
test = ["pytest>=7"]
lint = ["ruff>=0.6"]
dev = ["build>=1.0", "pytest>=7", "ruff>=0.6", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/fcotizelati/pydoppler3d"
"Source Code" = "https://github.com/fcotizelati/pydoppler3d"

[tool.setuptools.packages.find]
where = ["."]
include = ["pydoppler3d*"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
